# Windscribe

./: .gitignore  README.md  pyproject.toml
windscribe/: __init__.py  main.py
