[tool.poetry]
name = "Windscribe"
version = "0.2.0"
description = "A python wrapper library for Windscribe CLI"
authors = ["Shayne Hartford <shaybox@shaybox.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pexpect = "^4.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
